objects/Order__x.object
<CustomObject>
    <description>Orders</description>
    <externalDataSource>Orders_DBs</externalDataSource>
    <externalName>Orders</externalName>
    <fields>
        <fullName>customerID__c</fullName>
        <description>customerID</description>
        <externalDeveloperName>customerID</externalDeveloperName>
        <label>customerID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>orderDate__c</fullName>
        <description>orderDate</description>
        <externalDeveloperName>orderDate</externalDeveloperName>
        <label>orderDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>orderID__c</fullName>
        <description>orderID</description>
        <externalDeveloperName>orderID</externalDeveloperName>
        <label>orderID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>shippedDate__c</fullName>
        <description>shippedDate</description>
        <externalDeveloperName>shippedDate</externalDeveloperName>
        <label>shippedDate</label>
        <type>DateTime</type>
    </fields>
    <label>Order</label>
    <pluralLabel>Orders</pluralLabel>
</CustomObject>